# tkom

./: .pre-commit-config.yaml  Cargo.toml  README.md  grammar.ebnf  snippet.txt
docs/: final.md  initial.md
src/: error.rs  lexer.rs  main.rs  parser.rs  stdlib.rs  token.rs
src/data/: mod.rs  progtree.rs  runtime.rs  token.rs
src/lexer/: mod.rs  tests.rs  token.rs
src/parser/: mod.rs  nodes.rs  tests.rs
src/visitors/: executor.rs  mod.rs  tests.rs
