[package]
name = "tkom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utf8-read = "0.4.0"
clap = { version = "3.1.8", features = ["derive"] }
colored = "2.0.0"

[profile.release]
lto = true
strip = "symbols"
